--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://purnewas.sirv.com/travelly/style.min.css">
     <meta name="description" content="Travelly is a travel agency website that helps you pick out your holiday vacations">
     <meta name="robots" content="index, follow" />
-    <link rel="shortcut icon" href="./icons/airplane.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://purnewas.sirv.com/travelly/icons/airplane.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pattaya&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
-    <title>Travelly | Travelling Agency</title>
+    <title>Travelly | Traveling Agency</title>
 </head>
 <body>
     <main>
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
         </header>
-        <section class="hero">
+        <section id="landing-page">
             <h2>Travel Beyond Limits.</h2>
             <h3>Start your travel at an affordable price with Travelly <br/> Contact us now bellow.</h3>
             <button>Book Now</button>
@@ -36,8 +36,8 @@
                 <h3>We cover everything from picking the perfect hotel, <br/>
                     flight and travelling destination.
                 </h3>
-                <img src="./img/cloud.png" class="moving-cloud-1 cloud" alt="cloud-image">
-                <img src="./img/cloud.png" class="moving-cloud-2 cloud" alt="cloud-image2">
+                <img src="https://purnewas.sirv.com/travelly/img/cloud.png" class="moving-cloud-1 cloud" alt="cloud-image">
+                <img src="https://purnewas.sirv.com/travelly/img/cloud.png" class="moving-cloud-2 cloud" alt="cloud-image2">
             </header>
         </section>
         <section id="benefits">
@@ -48,21 +48,21 @@
             <div class="cards">
                 <div class="card">
                     <div class="card-icon">
-                        <img src="./icons/route-solid.svg" alt="route-icon">
+                        <img src="https://purnewas.sirv.com/travelly/icons/route-solid.svg" alt="route-icon">
                     </div>
                     <h4>Travel</h4>
                     <p>Travel in over 250 countries with no effort</p>
                 </div>
                 <div class="card">
                     <div class="card-icon">
-                        <img src="./icons/bed-solid.svg" alt="bed-icon">
+                        <img src="https://purnewas.sirv.com/travelly/icons/bed-solid.svg" alt="bed-icon">
                     </div>
                     <h4>Hotel</h4>
                     <p>Hotels located near popular areas.</p>
                 </div>
                 <div class="card">
                     <div class="card-icon">
-                        <img src="./icons/plane-departure-solid.svg" alt="plane-icon">
+                        <img src="https://purnewas.sirv.com/travelly/icons/plane-departure-solid.svg" alt="plane-icon">
                     </div>
                     <h4>Fly</h4>
                     <p>Flight included in every purchased trip.</p>
@@ -92,9 +92,9 @@
         <div class="footer-wrapper">
             <h5>Travelly &copy; 2023</h5>
             <ul>
-                <li><a href="#"><img src="./icons/twitter.svg" alt="twitter-icon"></a></li>
-                <li><a href="#"><img src="./icons/youtube.svg" alt="youtube-icon"></a></li>
-                <li><a href="#"><img src="./icons/instagram.svg" alt="instagram-icon"></a></li>
+                <li><a href="#"><img src="https://purnewas.sirv.com/travelly/icons/twitter.svg" alt="twitter-icon"></a></li>
+                <li><a href="#"><img src="https://purnewas.sirv.com/travelly/icons/youtube.svg" alt="youtube-icon"></a></li>
+                <li><a href="#"><img src="https://purnewas.sirv.com/travelly/icons/instagram.svg" alt="instagram-icon"></a></li>
             </ul>
         </div>
     </footer>
