put sizes in images

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <h3>We cover everything from picking the perfect hotel, <br/>
                     flight and travelling destination.
                 </h3>
-                <img src="https://purnewas.sirv.com/travelly/img/cloud.png" class="moving-cloud-1 cloud" alt="cloud-image">
-                <img src="https://purnewas.sirv.com/travelly/img/cloud.png" class="moving-cloud-2 cloud" alt="cloud-image2">
+                <img width="1124" height="606" src="https://purnewas.sirv.com/travelly/img/cloud.png" class="moving-cloud-1 cloud" alt="cloud-image">
+                <img width="1124" height="606" src="https://purnewas.sirv.com/travelly/img/cloud.png" class="moving-cloud-2 cloud" alt="cloud-image2">
             </header>
         </section>
         <section id="benefits">
@@ -48,21 +48,24 @@
             <div class="cards">
                 <div class="card">
                     <div class="card-icon">
-                        <img src="https://purnewas.sirv.com/travelly/icons/route-solid.svg" alt="route-icon">
+                        <img src="https://purnewas.sirv.com/travelly/icons/route-solid.svg" width="58"
+                        height="58" alt="route-icon">
                     </div>
                     <h4>Travel</h4>
                     <p>Travel in over 250 countries with no effort</p>
                 </div>
                 <div class="card">
                     <div class="card-icon">
-                        <img src="https://purnewas.sirv.com/travelly/icons/bed-solid.svg" alt="bed-icon">
+                        <img src="https://purnewas.sirv.com/travelly/icons/bed-solid.svg" width="58"
+                        height="58" alt="bed-icon">
                     </div>
                     <h4>Hotel</h4>
                     <p>Hotels located near popular areas.</p>
                 </div>
                 <div class="card">
                     <div class="card-icon">
-                        <img src="https://purnewas.sirv.com/travelly/icons/plane-departure-solid.svg" alt="plane-icon">
+                        <img src="https://purnewas.sirv.com/travelly/icons/plane-departure-solid.svg" width="58"
+                        height="58" alt="plane-icon">
                     </div>
                     <h4>Fly</h4>
                     <p>Flight included in every purchased trip.</p>
@@ -92,9 +95,12 @@
         <div class="footer-wrapper">
             <h5>Travelly &copy; 2023</h5>
             <ul>
-                <li><a href="#"><img src="https://purnewas.sirv.com/travelly/icons/twitter.svg" alt="twitter-icon"></a></li>
-                <li><a href="#"><img src="https://purnewas.sirv.com/travelly/icons/youtube.svg" alt="youtube-icon"></a></li>
-                <li><a href="#"><img src="https://purnewas.sirv.com/travelly/icons/instagram.svg" alt="instagram-icon"></a></li>
+                <li><a href="#"><img src="https://purnewas.sirv.com/travelly/icons/twitter.svg" width="30"
+                    height="30" alt="twitter-icon"></a></li>
+                <li><a href="#"><img src="https://purnewas.sirv.com/travelly/icons/youtube.svg" width="30"
+                    height="30" alt="youtube-icon"></a></li>
+                <li><a href="#"><img src="https://purnewas.sirv.com/travelly/icons/instagram.svg" width="30"
+                    height="30" alt="instagram-icon"></a></li>
             </ul>
         </div>
     </footer>
